@@ -10,10 +10,10 @@ Per https://www.debian.org/doc/debian-policy/ch-source.html#convenience-copies-o
  3 files changed, 4 insertions(+), 4 deletions(-)
 
 diff --git a/configure.py b/configure.py
-index a361cf1..74f28af 100644
+index fdc86f2..afd6bea 100644
 --- a/configure.py
 +++ b/configure.py
-@@ -2491,7 +2491,7 @@ def get_sip_flags(target_config):
+@@ -2506,7 +2506,7 @@ def get_sip_flags(target_config):
      the target configuration.
      """
  
@@ -23,7 +23,7 @@ index a361cf1..74f28af 100644
      # If we don't check for signed interpreters, we exclude the 'VendorID'
      # feature
 diff --git a/designer/pluginloader.cpp b/designer/pluginloader.cpp
-index 87a006c..c237351 100644
+index d4fb17a..8fb5450 100644
 --- a/designer/pluginloader.cpp
 +++ b/designer/pluginloader.cpp
 @@ -167,7 +167,7 @@ bool PyCustomWidgets::importPlugins(const QString &dir, const QStringList &plugi
@@ -36,7 +36,7 @@ index 87a006c..c237351 100644
          if (!sip_unwrapinstance)
              return true;
 diff --git a/qmlscene/pluginloader.cpp b/qmlscene/pluginloader.cpp
-index 3825b0b..eadd038 100644
+index 635d31e..807a470 100644
 --- a/qmlscene/pluginloader.cpp
 +++ b/qmlscene/pluginloader.cpp
 @@ -412,9 +412,9 @@ PyObject *PyQt5QmlPlugin::getModuleAttr(const char *module, const char *attr)
