@@ -2,6 +2,7 @@ pyqt5 (5.15.0+dfsg-1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Bump python3-sip-dev build-dependency to 4.19.23, following upstream.
+  * Refresh debian/patches/public_sip.diff.
 
  -- Dmitry Shachnev <mitya57@debian.org>  Mon, 08 Jun 2020 11:54:19 +0300
 
